[workspace]

members = [
  "lunir-lua50",
  "lunir-lua51",
  "lunir-lua52",
  "lunir-lua53",
  "lunir-lua54",
  "lunir-luau",
  "lunir-lua-cli",
  ]

[workspace.package]
license = "MIT OR Apache-2.0"
categories = [
  "compilers",
  "parsing",
]

[workspace.dependencies]
ariadne = "0.2.0"
lifering = "0.4.0"
logos = "0.13.0"
chumsky = { version = "1.0.0-alpha.3", features = ["label", "spill-stack"] }
tinyvec = { version = "1.6.0", features = ["alloc", "rustc_1_57"] }