[package]
name = "lunir-lua-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] } 
logos = { workspace = true }
lunir-lua50 = { path = "../lunir-lua50" }
